# psyplot-gui

./: .appveyor.yml  .buildinfo  .cruft.json  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  api.html  appveyor.yml  changelog.html  command_line.html  configuration.html  contribute.html  contributing.html  genindex.html  getting_started.html  index.html  installing.html  objects.inv  plugins.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  todos.html  tox.ini  versioneer.py
.circleci/: config.yml
.github/: issue_template.md
_modules/: index.html  psyplot_gui.html
_modules/psyplot_gui/: backend.html  common.html  console.html  content_widget.html  dataframeeditor.html  dependencies.html  fmt_widget.html  help_explorer.html  main.html  plot_creator.html  preferences.html
_sources/: configuration.rst.txt  getting_started.rst.txt  index.rst.txt  installing.rst.txt  plugins.rst.txt
_sources/api/: psyplot_gui.backend.rst.txt  psyplot_gui.common.rst.txt  psyplot_gui.compat.qtcompat.rst.txt  psyplot_gui.compat.rst.txt  psyplot_gui.config.rcsetup.rst.txt  psyplot_gui.config.rst.txt  psyplot_gui.console.rst.txt  psyplot_gui.content_widget.rst.txt  psyplot_gui.dataframeeditor.rst.txt  psyplot_gui.dependencies.rst.txt  psyplot_gui.fmt_widget.rst.txt  psyplot_gui.help_explorer.rst.txt  psyplot_gui.main.rst.txt  psyplot_gui.plot_creator.rst.txt  psyplot_gui.preferences.rst.txt  psyplot_gui.rst.txt  psyplot_gui.sphinx_supp.conf.rst.txt  psyplot_gui.sphinx_supp.rst.txt
_static/: documentation_options.js
api/: psyplot_gui.backend.html  psyplot_gui.common.html  psyplot_gui.compat.html  psyplot_gui.compat.qtcompat.html  psyplot_gui.config.html  psyplot_gui.config.rcsetup.html  psyplot_gui.console.html  psyplot_gui.content_widget.html  psyplot_gui.dataframeeditor.html  psyplot_gui.dependencies.html  psyplot_gui.fmt_widget.html  psyplot_gui.help_explorer.html  psyplot_gui.html  psyplot_gui.main.html  psyplot_gui.plot_creator.html  psyplot_gui.preferences.html  psyplot_gui.sphinx_supp.conf.html  psyplot_gui.sphinx_supp.html
ci/: deploy_anaconda.ps1  deploy_anaconda.py  deploy_anaconda.sh  enhance_recipe.py  environment.yml  recipe_from_setup.py  requirements.txt
ci/conda-recipe/: meta.yaml  osx-post.sh  osx-pre.sh
ci/conda_recipe/: meta.yaml
docs/: api.rst  apigen.bash  changelog.rst  command_line.rst  conf.py  configuration.rst  contribute.rst  environment.yml  getting_started.rst  index.rst  installing.rst  plugins.rst  requirements.txt  todos.rst  user-guide.rst
docs/_templates/: layout.html
docs/api/: psyplot_gui.backend.rst  (+17 more)
icon/: icon.pkl
psyplot_gui/: __init__.py  _version.py  backend.py  common.py  console.py  content_widget.py  dataframeeditor.py  dependencies.py  fmt_widget.py  help_explorer.py  main.py  plot_creator.py  preferences.py  version.py
recipe/: build.sh  meta.template  meta.yaml  osx-post.sh  osx-pre.sh
tests/: _base_testing.py  conftest.py  dummy_module.py  logging.yml  test-t2m-u-v.nc.license  test_console.py  test_dataframeeditor.py  test_dependencies.py  test_fmt_widget.py  test_help_explorer.py  test_main.py  test_plot_creator.py  test_preferences.py  test_project_content.py
(+36 files in other folders)
